syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc GetUsers (Empty) returns (UsersResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (DeleteResponse);
  rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message Empty {}

message UserRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4; // "buyer", "seller", "agent", "admin"
  string phone = 5;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string phone = 6;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string phone = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserResponse {
  User user = 1;
}

message UsersResponse {
  repeated User users = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}